--- a/index.ipynb
+++ b/index.ipynb
@@ -30,9 +30,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import plotly\n",
     "from plotly.offline import iplot, init_notebook_mode\n",
@@ -52,9 +65,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "type": "scatter",
+         "uid": "98aa887c-e96b-11e8-aabf-0242ac110007",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          2,
+          3,
+          4
+         ]
+        },
+        {
+         "type": "scatter",
+         "uid": "98aa8b92-e96b-11e8-aabf-0242ac110007",
+         "x": [
+          2,
+          3,
+          4
+         ],
+         "y": [
+          5,
+          3,
+          4
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Our sample plot"
+       }
+      },
+      "text/html": [
+       "<div id=\"0e2f77e6-a10a-4b45-b1d7-a5006e3dcdcb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0e2f77e6-a10a-4b45-b1d7-a5006e3dcdcb\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"98af80d4-e96b-11e8-aabf-0242ac110007\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"98af84b2-e96b-11e8-aabf-0242ac110007\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"0e2f77e6-a10a-4b45-b1d7-a5006e3dcdcb\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"0e2f77e6-a10a-4b45-b1d7-a5006e3dcdcb\", [{\"x\": [1, 2, 3], \"y\": [2, 3, 4], \"type\": \"scatter\", \"uid\": \"98af80d4-e96b-11e8-aabf-0242ac110007\"}, {\"x\": [2, 3, 4], \"y\": [5, 3, 4], \"type\": \"scatter\", \"uid\": \"98af84b2-e96b-11e8-aabf-0242ac110007\"}], {\"title\": \"Our sample plot\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "sample_trace = {'x': [1, 2, 3], 'y': [2, 3, 4]}\n",
     "other_sample_trace = {'x': [2, 3, 4], 'y': [5, 3, 4]}\n",
@@ -99,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [{'x': 1, 'y': 1}, {'x': 3, 'y': 2}, {'x': 2, 'y': 5}]"
+    "data = [{'x': 1, 'y': 1}, {'x': 3, 'y': 2}, {'x': 2, 'y': 5}]\n"
    ]
   },
   {
@@ -127,12 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    pass"
+    "def build_trace (data, mode='markers', name='data'):\n",
+    "    x_values =  list(map(lambda datapoint: datapoint['x'], data))\n",
+    "    y_values =  list(map(lambda datapoint: datapoint['y'], data))\n",
+    "    return {'x': x_values, \"y\": y_values, 'mode': mode, 'name': name}\n",
+    "    \n",
+    "   "
    ]
   },
   {
@@ -144,9 +209,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [1, 3, 2], 'y': [1, 2, 5], 'mode': 'markers', 'name': 'data'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data = [{'x': 1, 'y': 1}, {'x': 3, 'y': 2}, {'x': 2, 'y': 5}]\n",
     "build_trace(data)\n",
@@ -162,9 +238,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [1, 3, 2], 'y': [1, 2, 5], 'mode': 'scatter', 'name': 'data'}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "build_trace(data, 'scatter')\n",
     "# {'mode': 'scatter', 'name': 'data', 'x': [1, 3, 2], 'y': [1, 2, 5]}"
@@ -181,9 +268,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [1, 3, 2], 'y': [1, 2, 5], 'mode': 'markers', 'name': 'sample plot'}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "build_trace(data, 'markers', 'sample plot')\n",
     "# {'mode': 'markers', 'name': 'sample plot', 'x': [1, 3, 2], 'y': [1, 2, 5]}"
@@ -191,15 +289,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "data",
+         "type": "scatter",
+         "uid": "16beb588-e96e-11e8-aabf-0242ac110007",
+         "x": [
+          1,
+          3,
+          2
+         ],
+         "y": [
+          1,
+          2,
+          5
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "my_trace",
+         "type": "scatter",
+         "uid": "16bebf06-e96e-11e8-aabf-0242ac110007",
+         "x": [
+          1,
+          3,
+          2
+         ],
+         "y": [
+          1,
+          2,
+          5
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"65bc2454-f635-4578-978b-7309da6601cf\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"65bc2454-f635-4578-978b-7309da6601cf\", [{\"mode\": \"markers\", \"name\": \"data\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"16c4691a-e96e-11e8-aabf-0242ac110007\"}, {\"mode\": \"lines\", \"name\": \"my_trace\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"16c471a8-e96e-11e8-aabf-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"65bc2454-f635-4578-978b-7309da6601cf\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"65bc2454-f635-4578-978b-7309da6601cf\", [{\"mode\": \"markers\", \"name\": \"data\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"16c4691a-e96e-11e8-aabf-0242ac110007\"}, {\"mode\": \"lines\", \"name\": \"my_trace\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"16c471a8-e96e-11e8-aabf-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# trace0 = build_trace(data)\n",
+    " trace0 = build_trace(data)\n",
     "\n",
-    "# trace0 = build_trace(data, 'markers')\n",
-    "# trace1 = build_trace(data, 'lines', 'my_trace')\n",
-    "# plot({'data':[trace0, trace1]})"
+    " trace0 = build_trace(data, 'markers')\n",
+    " trace1 = build_trace(data, 'lines', 'my_trace')\n",
+    " plot({'data':[trace0, trace1]})"
    ]
   },
   {
@@ -218,19 +366,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "def trace_values(x_values, y_values, mode = 'markers', name=\"data\"):\n",
-    "     pass"
+    "    return {'x': x_values, 'y': y_values, 'mode': mode, 'name':'name'}\n",
+    "     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [1, 2, 3], 'y': [2, 4, 5], 'mode': 'markers', 'name': 'name'}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trace_values([1, 2, 3], [2, 4, 5])\n",
     "\n",
@@ -246,9 +406,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'x': [1, 2, 3], 'y': [2, 4, 5], 'mode': 'lines', 'name': 'name'}"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "trace_values([1, 2, 3], [2, 4, 5], 'lines', 'line trace')\n",
     "# {'mode': 'lines', 'name': 'line trace', 'x': [1, 2, 3], 'y': [2, 4, 5]}"
@@ -270,12 +441,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "lines",
+         "name": "name",
+         "type": "scatter",
+         "uid": "209d5d84-e96e-11e8-aabf-0242ac110007",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          2,
+          4,
+          5
+         ]
+        }
+       ],
+       "layout": {}
+      },
+      "text/html": [
+       "<div id=\"66580b19-f044-49e9-8d4e-3708d0d2069f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"66580b19-f044-49e9-8d4e-3708d0d2069f\", [{\"mode\": \"lines\", \"name\": \"name\", \"x\": [1, 2, 3], \"y\": [2, 4, 5], \"type\": \"scatter\", \"uid\": \"20afba38-e96e-11e8-aabf-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"66580b19-f044-49e9-8d4e-3708d0d2069f\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"66580b19-f044-49e9-8d4e-3708d0d2069f\", [{\"mode\": \"lines\", \"name\": \"name\", \"x\": [1, 2, 3], \"y\": [2, 4, 5], \"type\": \"scatter\", \"uid\": \"20afba38-e96e-11e8-aabf-0242ac110007\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# trace2 = trace_values([1, 2, 3], [2, 4, 5], 'line', 'line trace')\n",
-    "# plot({'data': [trace2]})"
+    "trace2 = trace_values([1, 2, 3], [2, 4, 5], 'lines', 'line trace')\n",
+    "plot({'data': [trace2]})"
    ]
   },
   {
@@ -301,11 +506,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.plotly.v1+json": {
+       "data": [
+        {
+         "mode": "markers",
+         "name": "data",
+         "type": "scatter",
+         "uid": "231249a8-e96e-11e8-aabf-0242ac110007",
+         "x": [
+          1,
+          3,
+          2
+         ],
+         "y": [
+          1,
+          2,
+          5
+         ]
+        },
+        {
+         "mode": "lines",
+         "name": "name",
+         "type": "scatter",
+         "uid": "23125132-e96e-11e8-aabf-0242ac110007",
+         "x": [
+          1,
+          2,
+          3
+         ],
+         "y": [
+          2,
+          4,
+          5
+         ]
+        }
+       ],
+       "layout": {
+        "title": "Sample Title"
+       }
+      },
+      "text/html": [
+       "<div id=\"f677503f-c527-4e15-82ce-60c5dd354272\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f677503f-c527-4e15-82ce-60c5dd354272\", [{\"mode\": \"markers\", \"name\": \"data\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"23177608-e96e-11e8-aabf-0242ac110007\"}, {\"mode\": \"lines\", \"name\": \"name\", \"x\": [1, 2, 3], \"y\": [2, 4, 5], \"type\": \"scatter\", \"uid\": \"23177914-e96e-11e8-aabf-0242ac110007\"}], {\"title\": \"Sample Title\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<div id=\"f677503f-c527-4e15-82ce-60c5dd354272\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"f677503f-c527-4e15-82ce-60c5dd354272\", [{\"mode\": \"markers\", \"name\": \"data\", \"x\": [1, 3, 2], \"y\": [1, 2, 5], \"type\": \"scatter\", \"uid\": \"23177608-e96e-11e8-aabf-0242ac110007\"}, {\"mode\": \"lines\", \"name\": \"name\", \"x\": [1, 2, 3], \"y\": [2, 4, 5], \"type\": \"scatter\", \"uid\": \"23177914-e96e-11e8-aabf-0242ac110007\"}], {\"title\": \"Sample Title\"}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# plot({'data': [trace0, trace2], 'layout': {'title': 'Sample Title'}})"
+    "  plot({'data': [trace0, trace2], 'layout': {'title': 'Sample Title'}})"
    ]
   },
   {
@@ -317,17 +574,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
+    "    if isinstance(x_range,list): layout_update ({'x_axis': x_range}})\n",
+    "    if isinstance(y_range,list): layout_update ({'y_axis': y_range})    \n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
@@ -531,7 +790,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
